src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

body {
    background-image: url("../../public/bg.svg");
    background-repeat: no-repeat;
    background-position: center;
}

.main {
    margin: 0 auto;
    padding: 0 0 0 16rem;
    min-height: 100vh;
}

.main-auth {
    margin: 0 auto;
    padding: 0;
    min-height: 100vh;
}

.section {
    max-width: 1450px;
    margin: 0 auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.container {
    padding: 2rem;
    display: flex;
    flex-direction: column;
    gap: 0.2rem;
    background-color: #ffffff99;
}

h1 {
    font-size: 4rem;
    line-height: 3.4rem;
}

h2 {
    font-size: 3rem;
    line-height: 3.2rem;
}

h3 {
    font-size: 2.2rem;
    line-height: 2.8rem;
}

h4 {
    font-size: 1.8rem;
    line-height: 2.2rem;
}

h5 {
    font-size: 1.4rem;
    line-height: 1.8rem;
}

h6 {
    font-size: 1.2rem;
    line-height: 1.4rem;
}

p {
    font-size: 1rem;
    line-height: 1.2rem;
}

span {
    font-size: 0.8rem;
    line-height: 1rem;
}

/* Customize scrollbar for all overflow-x containers */
.table-scroll-x::-webkit-scrollbar {
    height: 6px;
}
.table-scroll-x::-webkit-scrollbar-track {
    background: #e5e7eb; /* Tailwind gray-200 */
}
.table-scroll-x::-webkit-scrollbar-thumb {
    background-color: var(--primary); /* Tailwind gray-500 */
    cursor: pointer;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-font-sans);
    --font-mono: var(--font-font-mono);
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);
}

:root {
    --radius: 0;
    --background: oklch(1 0 0);
    --foreground: oklch(0.147 0.004 49.25);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.147 0.004 49.25);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.147 0.004 49.25);
    --primary: oklch(0.5164 0.2492 298.64); /* #8027df */
    --primary-foreground: oklch(0.985 0.001 106.423);
    --secondary: oklch(0.7326 0.1375 62.42); /* #e59341 */
    --secondary-foreground: oklch(0.216 0.006 56.043);
    --muted: oklch(0.7035 0.1802 298.64); /* #b082ff */
    --muted-foreground: oklch(0.7035 0.1802 298.64 / 70%); /* #9a4cff */
    --accent: oklch(0.97 0.001 106.424);
    --accent-foreground: oklch(0.216 0.006 56.043);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.923 0.003 48.717);
    --input: oklch(0.923 0.003 48.717);
    --placeholder: oklch(0.923 0.003 48.717);
    --ring: oklch(0.709 0.01 56.259);
    --chart-1: oklch(0.646 0.222 41.116);
    --chart-2: oklch(0.6 0.118 184.704);
    --chart-3: oklch(0.398 0.07 227.392);
    --chart-4: oklch(0.828 0.189 84.429);
    --chart-5: oklch(0.769 0.188 70.08);
    --sidebar: oklch(0.9896 0.001 106.423); /* #fcfcfb */
    --sidebar-foreground: oklch(0.147 0.004 49.25);
    --sidebar-primary: oklch(0.216 0.006 56.043);
    --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
    --sidebar-accent: oklch(0.97 0.001 106.424);
    --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
    --sidebar-border: oklch(0.9551 0 0);
    --sidebar-ring: oklch(0.709 0.01 56.259);
}

.dark {
    --background: oklch(0.147 0.004 49.25);
    --foreground: oklch(0.985 0.001 106.423);
    --card: oklch(0.216 0.006 56.043);
    --card-foreground: oklch(0.985 0.001 106.423);
    --popover: oklch(0.216 0.006 56.043);
    --popover-foreground: oklch(0.985 0.001 106.423);
    --primary: oklch(0.5164 0.2492 298.64); /* #8027df */
    --primary-foreground: oklch(0.216 0.006 56.043);
    --secondary: oklch(0.7326 0.1375 62.42); /* #e59341 */
    --secondary-foreground: oklch(0.985 0.001 106.423);
    --muted: oklch(0.6387 0.1153 298.64); /* ##957bc8 */
    --muted-foreground: oklch(0.7478 0.2492 298.64); /* # */
    --accent: oklch(0.268 0.007 34.298);
    --accent-foreground: oklch(0.985 0.001 106.423);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.553 0.013 58.071);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.216 0.006 56.043);
    --sidebar-foreground: oklch(0.985 0.001 106.423);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
    --sidebar-accent: oklch(0.268 0.007 34.298);
    --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
    --sidebar-border: oklch(0.3257 0 0); /* #343434 */
    --sidebar-ring: oklch(0.553 0.013 58.071);

    body {
        background-image: url("../../public/bg-dark.svg");
    }

    .container {
        background-color: oklch(0.147 0.004 49.25 / 40%);
    }
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background text-foreground;
    }
}

